Thu Sep 13 20:24:52 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added defines SILC_DEFAULT_CIPHER, SILC_DEFAULT_HMAC,
	  SILC_DEFAULT_HASH and SILC_DEFAULT_PKCS in the file
	  lib/silccrypt/[silccipher.h|silchmac.h|silchash.h|silcpkcs.h].

	* Removed channel key rekey task deleting from the function
	  silc_server_save_channel_key.  Affected file silcd/server.c.
	  Added explicit timeout task context instead that is used to	
	  delete the task if we are registering a new task before the
	  new task has elapsed.

	* When channel key rekey occurs the client library now saves
	  the old channel key for a short period of time (10 seconds) and
	  is able to use it in case some is still sending channel
	  messages encrypted with the old key after the rekey.  Affected
	  file lib/silcclient/[idlist.h|client_channel.c].

Sun Sep  9 15:49:16 EEST 2001  Pekka Riikonen <priikone@silcnet.org>

	* Added check to the silc_server_new_id_real to not accept
	  new ID if it is the sender's own ID.  Affected file is
	  silcd/packet_receive.c.

	* Assure that we do not announce ourself or the one we've
	  sending our announcements when we're router and are announcing
	  servers to our primary router.  Affected file silcd/server.c.

	* Fixed silc_server_command_identify_check_client to assemble
	  correct WHOIS packet.  It send corrupted WHOIS packet and
	  caused problem with router to router connections.  Affected
	  file silcd/command.c.

	  Fixed also silc_server_command_whois_check the same way
	  as for the IDENTIFY command.

	* Added new SilcIDListStatus to the server in the SilcIDListData
	  structure.   The status now includes the current status of
	  the entry (like registered, resolved etc.).  Affected file
	  silcd/idlist.[ch].  Defined a bunch of different status types
	  as well.  This replaced the old boolean registered field as well.

	  Added resolve_cmd_ident field to the SilcClientEntry structure
	  too so that if the entry is for example being resolved so 