@@ -1,3 +1,9 @@
+Thu Sep 13 23:11:18 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
+
+	* When printing the channel mode on JOIN, verify that the
+	  channel key and channel's HMAC are valid.  Affected file
+	  irssi/src/silc/core/client_ops.c.
+
 Thu Sep 13 20:24:52 EEST 2001  Pekka Riikonen <priikone@silcnet.org>
 
 	* Added defines SILC_DEFAULT_CIPHER, SILC_DEFAULT_HMAC,
